--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,39 @@ on:
       - master
 
 jobs:
-  # Job de Tests
+  # Job de Préparation
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      dbt_profile_path: ~/.dbt/profiles.yml
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Configuration de dbt profile
+      - name: Configure dbt profile
+        id: dbt_profile
+        run: |
+          mkdir -p ~/.dbt
+          echo "
+          DBT_transform_comments:
+            outputs:
+              dev:
+                account: \"${{ secrets.SNOWFLAKE_ACCOUNT }}\"
+                user: \"${{ secrets.SNOWFLAKE_USER }}\"
+                password: \"${{ secrets.SNOWFLAKE_PASSWORD }}\"
+                role: \"${{ secrets.SNOWFLAKE_ROLE }}\"
+                database: \"${{ secrets.SNOWFLAKE_DATABASE }}\"
+                warehouse: \"${{ secrets.SNOWFLAKE_WAREHOUSE }}\"
+                schema: \"${{ secrets.SNOWFLAKE_SCHEMA }}\"
+                type: snowflake
+            target: dev
+          " > ~/.dbt/profiles.yml
+
+  # Job de Tests, dépendant de la préparation
   test:
     runs-on: ubuntu-latest
+    needs: setup
 
     steps:
       - name: Checkout code
@@ -26,44 +56,20 @@ jobs:
 
       - name: Test DBT Project Configuration
         run: dbt debug
-        env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
 
       - name: Compile DBT Project
         run: dbt compile
-        env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
 
       - name: Run DBT tests
         run: dbt test
-        env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
 
       - name: Run pytest tests
         run: pytest tests/unit
 
-  # Job de Déploiement
+  # Job de Déploiement, dépendant de la préparation
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [setup, test]
 
     steps:
       - name: Checkout code
