--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
                 warehouse: \"${{ secrets.SNOWFLAKE_WAREHOUSE }}\"
                 schema: \"${{ secrets.SNOWFLAKE_SCHEMA }}\"
                 type: snowflake
+                threads: 1
             target: dev
           " > ~/.dbt/profiles.yml
 
