--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,40 +6,9 @@ on:
       - master
 
 jobs:
-  # Job de Préparation
-  setup:
-    runs-on: ubuntu-latest
-    outputs:
-      dbt_profile_path: ~/.dbt/profiles.yml
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Configuration de dbt profile
-      - name: Configure dbt profile
-        id: dbt_profile
-        run: |
-          mkdir -p ~/.dbt
-          echo "
-          DBT_transform_comments:
-            outputs:
-              dev:
-                account: \"${{ secrets.SNOWFLAKE_ACCOUNT }}\"
-                user: \"${{ secrets.SNOWFLAKE_USER }}\"
-                password: \"${{ secrets.SNOWFLAKE_PASSWORD }}\"
-                role: \"${{ secrets.SNOWFLAKE_ROLE }}\"
-                database: \"${{ secrets.SNOWFLAKE_DATABASE }}\"
-                warehouse: \"${{ secrets.SNOWFLAKE_WAREHOUSE }}\"
-                schema: \"${{ secrets.SNOWFLAKE_SCHEMA }}\"
-                type: snowflake
-                threads: 1
-            target: dev
-          " > ~/.dbt/profiles.yml
-
-  # Job de Tests, dépendant de la préparation
+  # Job de Tests
   test:
     runs-on: ubuntu-latest
-    needs: setup
 
     steps:
       - name: Checkout code
@@ -55,6 +24,34 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Configurer le fichier profiles.yml avec les secrets et le paramètre threads
+      - name: Configure dbt profile
+        run: |
+          mkdir -p ~/.dbt
+          echo "
+          DBT_transform_comments:
+            outputs:
+              dev:
+                account: \"${{ secrets.SNOWFLAKE_ACCOUNT }}\"
+                user: \"${{ secrets.SNOWFLAKE_USER }}\"
+                password: \"${{ secrets.SNOWFLAKE_PASSWORD }}\"
+                role: \"${{ secrets.SNOWFLAKE_ROLE }}\"
+                database: \"${{ secrets.SNOWFLAKE_DATABASE }}\"
+                warehouse: \"${{ secrets.SNOWFLAKE_WAREHOUSE }}\"
+                schema: \"${{ secrets.SNOWFLAKE_SCHEMA }}\"
+                threads: 1
+                type: snowflake
+            target: dev
+          " > ~/.dbt/profiles.yml
+
+      # Vérifier que profiles.yml est bien créé et afficher son contenu
+      - name: Verify profiles.yml
+        run: |
+          echo "Listing contents of ~/.dbt directory:"
+          ls -la ~/.dbt
+          echo "Displaying contents of ~/.dbt/profiles.yml:"
+          cat ~/.dbt/profiles.yml
+
       - name: Test DBT Project Configuration
         run: dbt debug
 
@@ -67,10 +64,10 @@ jobs:
       - name: Run pytest tests
         run: pytest tests/unit
 
-  # Job de Déploiement, dépendant de la préparation
+  # Job de Déploiement
   deploy:
     runs-on: ubuntu-latest
-    needs: [setup, test]
+    needs: test  # Exécute le déploiement uniquement si le job de tests réussit
 
     steps:
       - name: Checkout code
@@ -79,12 +76,39 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      # Configurer le fichier profiles.yml pour le déploiement aussi
+      - name: Configure dbt profile for deployment
+        run: |
+          mkdir -p ~/.dbt
+          echo "
+          DBT_transform_comments:
+            outputs:
+              dev:
+                account: \"${{ secrets.SNOWFLAKE_ACCOUNT }}\"
+                user: \"${{ secrets.SNOWFLAKE_USER }}\"
+                password: \"${{ secrets.SNOWFLAKE_PASSWORD }}\"
+                role: \"${{ secrets.SNOWFLAKE_ROLE }}\"
+                database: \"${{ secrets.SNOWFLAKE_DATABASE }}\"
+                warehouse: \"${{ secrets.SNOWFLAKE_WAREHOUSE }}\"
+                schema: \"${{ secrets.SNOWFLAKE_SCHEMA }}\"
+                threads: 1
+                type: snowflake
+            target: dev
+          " > ~/.dbt/profiles.yml
+
+      - name: Verify profiles.yml for deployment
+        run: |
+          echo "Listing contents of ~/.dbt directory for deployment:"
+          ls -la ~/.dbt
+          echo "Displaying contents of ~/.dbt/profiles.yml for deployment:"
+          cat ~/.dbt/profiles.yml
 
       - name: Package code for Lambda
         run: |
@@ -101,3 +125,4 @@ jobs:
           aws lambda update-function-code \
             --function-name dbt_runner_lambda \
             --zip-file fileb://dbt_lambda_package.zip
+
