--- a/models/sources/csv_source.yml
+++ b/models/sources/csv_source.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: csv_S3
-    database: reviews
+    database: "{{ env_var('SNOWFLAKE_DATABASE') }}"
     schema: S3_CSV_RAW_DATA
     tables:
-      - name: judgeme_reviews # Remplacez par le nom exact de la table
+      - name: csv_ingestion_from_S3 # Remplacez par le nom exact de la table
