fix: ajout installation dépendances dans package

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,12 +78,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -t dbt_lambda_package
 
       # Utiliser également le fichier profiles.yml existant pour le déploiement
       - name: Préparer le package Lambda
         run: |
-          rsync -av --exclude='dbt_lambda_package' --exclude='.git' --exclude='.github' --exclude='.gitattributes'  ./ dbt_lambda_package/
+          rsync -av --exclude='dbt_lambda_package' --exclude='.git' --exclude='.github' --exclude='.gitattributes'  ./* dbt_lambda_package/
           cd dbt_lambda_package
           zip -r -9 ../dbt_lambda_package.zip .
 
